RESOLVED FIXED60669
After relaunching an unresponsive web process, web page stops responding to mouse movement
https://bugs.webkit.org/show_bug.cgi?id=60669
Summary After relaunching an unresponsive web process, web page stops responding to m...
Brian Weinstein
Reported 2011-05-11 15:36:55 PDT
After relaunching an unresponsive web process, web page stops responding to mouse movement You can't can't scroll by dragging scrollbar, can't select text, etc. <rdar://problem/9409934>
Attachments
[PATCH] Fix with test (20.24 KB, patch)
2011-05-11 17:35 PDT, Brian Weinstein
aroben: review-
[PATCH] Fix with faster test (19.94 KB, patch)
2011-05-12 09:55 PDT, Brian Weinstein
andersca: review+
Brian Weinstein
Comment 1 2011-05-11 17:35:07 PDT
Created attachment 93221 [details] [PATCH] Fix with test
Brian Weinstein
Comment 2 2011-05-11 17:58:47 PDT
Sam stated this test will take too long. Waiting for the responsiveness callback is too long to wait for this test.
Adam Roben (:aroben)
Comment 3 2011-05-12 06:38:03 PDT
Comment on attachment 93221 [details] [PATCH] Fix with test r-ing on Sam's behalf.
Brian Weinstein
Comment 4 2011-05-12 09:55:09 PDT
Created attachment 93297 [details] [PATCH] Fix with faster test
Anders Carlsson
Comment 5 2011-05-12 09:57:59 PDT
Comment on attachment 93297 [details] [PATCH] Fix with faster test View in context: https://bugs.webkit.org/attachment.cgi?id=93297&action=review > Tools/TestWebKitAPI/Tests/WebKit2/MouseMoveAfterCrash.cpp:84 > + // Pause will hang the WebProcess long enough to get the processDidBecomeUnresponsive call, and there, we > + // reload the page, which restarts the web process. Wait until the page has been reloaded to continue with the test. This isn't true anymore, is it?
WebKit Review Bot
Comment 6 2011-05-12 09:59:01 PDT
Attachment 93297 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit2/ChangeLog', u'Source/WebKit..." exit_code: 1 Tools/TestWebKitAPI/Tests/WebKit2/MouseMoveAfterCrash.cpp:75: Tab found; better to use spaces [whitespace/tab] [1] Tools/TestWebKitAPI/Tests/WebKit2/MouseMoveAfterCrash.cpp:79: Tab found; better to use spaces [whitespace/tab] [1] Tools/TestWebKitAPI/Tests/WebKit2/MouseMoveAfterCrash.cpp:80: Tab found; better to use spaces [whitespace/tab] [1] Tools/TestWebKitAPI/Tests/WebKit2/MouseMoveAfterCrash.cpp:81: Tab found; better to use spaces [whitespace/tab] [1] Total errors found: 4 in 13 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brian Weinstein
Comment 7 2011-05-12 10:00:20 PDT
Comment on attachment 93297 [details] [PATCH] Fix with faster test View in context: https://bugs.webkit.org/attachment.cgi?id=93297&action=review >> Tools/TestWebKitAPI/Tests/WebKit2/MouseMoveAfterCrash.cpp:84 >> + // reload the page, which restarts the web process. Wait until the page has been reloaded to continue with the test. > > This isn't true anymore, is it? Nope. I'll clean up the comment.
Darin Adler
Comment 8 2011-06-18 13:00:04 PDT
Note You need to log in before you can comment on or make changes to this bug.