Tools/TestWebKitAPI/mac/PlatformWebViewMac.mm
@@ -122,5 +122,21 @@ void PlatformWebView::simulateRightClick(unsigned x, unsigned y)
     [m_view rightMouseUp:event];
 
 }
+    
+void PlatformWebView::simulateMouseMove(unsigned x, unsigned y)
+{   
+    NSEvent *event = [NSEvent mouseEventWithType:NSMouseMoved
+                               location:NSMakePoint(x, y)
+                          modifierFlags:0
+                              timestamp:GetCurrentEventTime()
+                           windowNumber:[m_window windowNumber]
+                                context:[NSGraphicsContext currentContext]
+                            eventNumber:0
+                             clickCount:0
+                               pressure:0];
+    
+    [m_view mouseMoved:event];
+    
+}
 
 } // namespace TestWebKitAPI
